Prevent phone number wrapping

--- a/usb/usb.css
+++ b/usb/usb.css
@@ -76,3 +76,7 @@ footer * {
 .logo img {
   margin-left: auto;
 }
+
+a[href^=tel] {
+  white-space: nowrap;
+}
